create header footer main

--- a/src/html/_headerMobile.htm
+++ b/src/html/_headerMobile.htm
@@ -1,90 +1,41 @@
-<header id="header" class="header">
-   <div class="header__top">
+<div id="header-mobile" class="header-mobile">
+   <div class="header-mobile__top">
       <div class="header__container container">
-         <div class="header__top-wrapper">
-            <div class="header__contacts">
-               <div class="header__phone-wrapper">
-                  <a class="header__phone-link" href="tel:+78122008275">
-                     <img src="../img/icons/phone-stroke.svg" alt="телефон">
-                     <span>+7 (812) 200 82 75</span>
-                     <img src="../img/icons/arrow-down.svg" alt="список телефонов">
-                  </a>
-                  <ul class="header__submenu">
-                     <li><a href="tel:+78122008276">+7 (812) 200 82 76</a></li>
-                     <li><a href="tel:+78122008277">+7 (812) 200 82 77</a></li>
-                  </ul>
-               </div>
-               <a class="header__email-wrapper" href="mailto:info@kevtek.ru">
+         <div class="header-mobile__top-wrapper">
+            <div class="header-mobile__contacts">
+               <a class="header-mobile__phone-link" href="tel:+78122008275">
+                  <img src="../img/icons/phone-stroke.svg" alt="телефон">
+                  <span>+7 (812) 200 82 75</span>
+               </a>
+               <a class="header-mobile__phone-link" href="tel:+78122008275">
+                  <img src="../img/icons/phone-stroke.svg" alt="телефон">
+                  <span>+7 (812) 200 82 75</span>
+               </a>
+               <a class="header-mobile__email-wrapper" href="mailto:info@kevtek.ru">
                   <img src="../img/icons/envelope-stroke.svg" alt="почта">
                   <span>info@kevtek.ru</span>
                </a>
             </div>
-            <nav class="header__nav-pages">
-               <ul class="header__nav-list">
-                  <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">О компании</a>
-                  </li>
-                  <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">
-                        <span>Покупателям</span>
-                        <img src="../img/icons/arrow-down.svg" alt="список покупателям">
-                     </a>
-                     <ul class="header__submenu">
-                        <li><a href="#">Юридическим лицам</a></li>
-                        <li><a href="#">Физическим лицам</a></li>
-                     </ul>
-                  </li>
-                  <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">
-                        <span>Полезное</span>
-                        <img src="../img/icons/arrow-down.svg" alt="список полезное">
-                     </a>
-                     <ul class="header__submenu">
-                        <li><a href="#">Документация</a></li>
-                        <li><a href="#">Статьи</a></li>
-                        <li><a href="#">Новости</a></li>
-                        <li><a href="#">Бренды</a></li>
-                     </ul>
-                  </li>
-                  <li class="header__nav-item">
-                     <a href="#" class="header__nav-link"><span>Помощь</span>
-                        <img src="../img/icons/arrow-down.svg" alt="список помощь">
-                     </a>
-                     <ul class="header__submenu">
-                        <li><a href="#">Вопрос-Ответ</a></li>
-                        <li><a href="#">Задать вопрос</a></li>
-                     </ul>
-                  </li>
-                  <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">Контакты</a>
-                  </li>
-               </ul>
-            </nav>
          </div>
       </div>
    </div>
-   <div class="header__bottom">
-      <div class="header__container container">
-         <div class="header__bottom-wrapper">
-            <a href="#" class="header__logo-link">
-               <img src="../img/icons/logo.svg" alt="логотип" class="header__logo">
+   <div class="header-mobile__bottom">
+      <div class="header-mobile__container container">
+         <div class="header-mobile__bottom-wrapper">
+            <a href="#" class="header-mobile__logo-link">
+               <img src="../img/icons/logo.svg" alt="логотип" class="header-mobile__logo">
             </a>
-            <div class="header__search-wrapper">
-               <button class="header__catalogue-btn btn">
-                  <div class="header__stripes">
-                     <span class="first"></span>
-                     <span class="second"></span>
-                     <span class="third"></span>
-                  </div>
-                  <p>Каталог</p>
+            <div class="header-mobile__search-wrapper">
+               <button class="header-mobile__catalogue-btn btn">
+                  <img src="../img/icons/catalog.svg" alt="каталог">
                </button>
-               <div class="header__search-field">
-                  <input type="search" name="search" id="search" placeholder="Поиск по каталогу" autocomplete="off"
-                     class="header__search-input">
-                  <button class="header__search-submit">
+               <div class="header-mobile__search-field">
+                  <input type="mobile-search" name="mobile-search" id="mobile-search" placeholder="Поиск по каталогу"
+                     autocomplete="off" class="header-mobile__search-input">
+                  <button class="header-mobile__search-submit">
                      <img src="../img/icons/zoom-glass.svg" alt="поиск">
                   </button>
-                  <div id="search__result" class="header__result" style="display: none">
+                  <div id="header-mobile__result" class="header-mobile__result" style="display: none">
                      <ul class="header__result-wrapper">
                         <li>
                            <a href="#">
@@ -259,7 +210,6 @@
                      </ul>
                      <a class="header__result-btn" href="#">Посмотреть все товары <span>(115)</span></a>
                   </div>
-
                </div>
                <div class="catalogue__layer">
                   <div class="catalogue__layer-scroll">
@@ -278,10 +228,14 @@
                                  <ul class="catalogue__category-grid">
                                     <li><a href="#">Серия НА</a><span>24</span>
                                        <ul>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок HA-003</a><span>15</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок HA-004</a><span>15</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок HA-010</a><span>4</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок HA-016</a><span>3</span></li>
+                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                                HA-003</a><span>15</span></li>
+                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                                HA-004</a><span>15</span></li>
+                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                                HA-010</a><span>4</span></li>
+                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                                HA-016</a><span>3</span></li>
                                        </ul>
                                     </li>
                                     <li><a href="#">Серия НE</a><span>60</span>
@@ -395,43 +349,67 @@
                   </div>
                </div>
             </div>
-            <nav class="header__actions">
-               <ul class="header__actions-list">
-                  <li class="header__actions-item">
-                     <a href="#" style="display: flex">
-                        <img src="../img/icons/login.svg" alt="Логин">
-                        <span>Войти</span>
-                     </a>
-                     <span style="display: none">11</span>
-                     <a style="display: none" href="#">
-                        <img src="../img/icons/account.svg" alt="Аккаунт">
-                        <span>Александр</span>
-                     </a>
-                  </li>
-                  <li class="header__actions-item">
-                     <span style="display: none">11</span>
-                     <a href="#">
-                        <img src="../img/icons/box-stroke.svg" alt="Заказы">
-                        <span>Заказы</span>
-                     </a>
-                  </li>
-                  <li class="header__actions-item">
-                     <span style="display: none">33</span>
-                     <a href="#">
-                        <img src="../img/icons/bookmark.svg" alt="Избранное">
-                        <span>Избранное</span>
-                     </a>
-                  </li>
-                  <li class="header__actions-item">
-                     <span style="display: none">5</span>
-                     <a href="#">
-                        <img src="../img/icons/cart.svg" alt="Корзина">
-                        <span>Корзина</span>
-                     </a>
-                  </li>
-               </ul>
-            </nav>
          </div>
       </div>
    </div>
-</header>
+</div>
+<nav class="mobile__nav-footer">
+   <div class="mobile__container container">
+      <ul class="mobile__actions-list">
+         <li class="mobile__actions-item">
+            <span style="display: none">5</span>
+            <a href="#">
+               <img src="../img/icons/home.svg" alt="Главная">
+               <span>Главная</span>
+            </a>
+         </li>
+         <li class="mobile__actions-item">
+            <span style="display: none">5</span>
+            <a href="#">
+               <img src="../img/icons/catalog-black.svg" alt="Каталог">
+               <span>Каталог</span>
+            </a>
+         </li>
+         <li class="mobile__actions-item">
+            <span style="display: none">5</span>
+            <a href="#">
+               <img src="../img/icons/cart.svg" alt="Корзина">
+               <span>Корзина</span>
+            </a>
+         </li>
+
+         <li class="mobile__actions-item">
+            <a href="#" style="display: flex">
+               <img src="../img/icons/login.svg" alt="Логин">
+               <span>Кабинет</span>
+            </a>
+            <span style="display: none">11</span>
+            <a style="display: none" href="#">
+               <img src="../img/icons/account.svg" alt="Аккаунт">
+               <span>Александр</span>
+            </a>
+         </li>
+         <li class="mobile__actions-item">
+            <span style="display: none">11</span>
+            <a href="#">
+               <img src="../img/icons/box-stroke.svg" alt="Заказы">
+               <span>Заказы</span>
+            </a>
+         </li>
+         <li class="mobile__actions-item">
+            <span style="display: none">33</span>
+            <a href="#">
+               <img src="../img/icons/bookmark.svg" alt="Избранное">
+               <span>Избранное</span>
+            </a>
+         </li>
+         <li class="mobile__actions-item">
+            <span style="display: none">5</span>
+            <a href="#">
+               <img src="../img/icons/menu-black.svg" alt="меню">
+               <span>Меню</span>
+            </a>
+         </li>
+      </ul>
+   </div>
+</nav>
