--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -16,7 +16,7 @@
          </div>
          <nav class="footer__nav">
             <div class="footer__connect">
-               <h4 class="footer__title">Мы на связи</h4>
+               <h5 class="footer__title">Мы на связи</h5>
                <div class="footer__connect-wrapper">
                   <a href="tel:+78122008275">
                      <img src="../img/icons/phone-stroke.svg" alt="телефон">
@@ -26,11 +26,12 @@
                      <img src="../img/icons/envelope-stroke.svg" alt="почта">
                      <span>info@kevtek.ru</span>
                   </a>
+                  <p>г. Всеволожскул. Аэропортовская, 14</p>
                </div>
                <button class="footer__write-btn">Написать нам</button>
             </div>
             <div class="footer__messenger">
-               <h4 class="footer__title">Мессенджеры</h4>
+               <h5 class="footer__title">Мессенджеры</h5>
                <div class="footer__messenger-wrapper">
                   <a href="https://whatsapp.com/"><img src="../img/icons/whatsapp.svg" alt="whatsapp"></a>
                   <a href="https://www.viber.com/"><img src="../img/icons/viber.svg" alt="viber"></a>
@@ -38,7 +39,7 @@
                </div>
             </div>
             <div class="footer__info">
-               <h4 class="footer__title">Информация</h4>
+               <h5 class="footer__title">Информация</h5>
                <ul class="footer__info-list">
                   <li><a href="#">О компании</a></li>
                   <li><a href="#">Новости</a></li>
@@ -48,7 +49,7 @@
                </ul>
             </div>
             <div class="footer__buyers">
-               <h4 class="footer__title">Покупателям</h4>
+               <h5 class="footer__title">Покупателям</h5>
                <ul class="footer__buyers-list">
                   <li><a href="#">Юридическим лицам</a></li>
                   <li><a href="#">Физическим лицам</a></li>
