adaptive first page

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -116,7 +116,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -150,7 +162,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -184,7 +208,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -218,7 +254,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -252,7 +300,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
