--- a/src/html/_headerMobile.htm
+++ b/src/html/_headerMobile.htm
@@ -7,7 +7,7 @@
                   <img src="../img/icons/phone-stroke.svg" alt="телефон">
                   <span>+7 (812) 200 82 75</span>
                </a>
-               <a class="header-mobile__phone-link" href="tel:+78122008275">
+               <a class="header-mobile__phone-link _last" href="tel:+78122008275">
                   <img src="../img/icons/phone-stroke.svg" alt="телефон">
                   <span>+7 (812) 200 82 75</span>
                </a>
@@ -26,9 +26,9 @@
                <img src="../img/icons/logo.svg" alt="логотип" class="header-mobile__logo">
             </a>
             <div class="header-mobile__search-wrapper">
-               <button class="header-mobile__catalogue-btn btn">
+               <a href="#" class="header-mobile__catalogue-btn btn">
                   <img src="../img/icons/catalog.svg" alt="каталог">
-               </button>
+               </a>
                <div class="header-mobile__search-field">
                   <input type="mobile-search" name="mobile-search" id="mobile-search" placeholder="Поиск по каталогу"
                      autocomplete="off" class="header-mobile__search-input">
@@ -67,7 +67,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -101,7 +113,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -135,7 +159,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -169,7 +205,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
@@ -203,7 +251,19 @@
                                     Контактная вставка – розетка (“мама”), типоразмер 3A, винтовое соединение, 3+PE
                                     (10A/400V)
                                  </p>
-                                 <button>В корзину</button>
+                                 <button class="product-page__add-cart">В корзину</button>
+                                 <div class="cart__counter-wrapper">
+                                    <div class="cart__counter">
+                                       <button class="cart-button__plus"><img src="./img/icons/plus.svg"
+                                             alt="добавить"></button>
+                                       <span class="cart__qty"> 1 </span>
+                                       <button class="cart-button__minus"><img src="./img/icons/minus.svg"
+                                             alt="убрать"></button>
+                                    </div>
+                                    <a href="#">
+                                       <img src="./img/icons/check.svg" alt="в корзине">
+                                    </a>
+                                 </div>
                               </div>
                            </div>
                         </li>
