--- a/src/html/_modal.htm
+++ b/src/html/_modal.htm
@@ -1,7 +1,7 @@
 <div data-modal="1" class="modal">
    <div data-close="true" class="modal__overlay">
       <div class="modal__body">
-         <span data-close="true" class="modal__close" data-close="true">&#10006;</span>
+         <span data-close="true" class="modal__close">&#10006;</span>
          <div class="modal__content">
             Модальное окно
          </div>
