--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
       @@include('html/_headerMobile.htm')
       <main>
          <section class="banner">
-
             <div class="banner__container container">
                <div class="banner__wrapper">
                   <div class="swiper banner-slider">
@@ -63,7 +62,7 @@
                            </div>
                            <img src="./img/icons/yandex-m-logo.png" alt="яндекс" class="banner__item-img">
                         </div>
-                        <img src="./img/icons/yandex-m-logo-2.png" alt="яндекс" >
+                        <img src="./img/icons/yandex-m-logo-2.png" alt="яндекс">
                      </div>
                      <div class="banner__market-item">
                         <div class="banner__item-wrapper">
@@ -71,14 +70,12 @@
                               <h5 class="banner__item-title">ВсеИнструменты.ру</h5>
                               <p class="banner__item-text">Полный ассортимент товаров на популярном маркетплейсе</p>
                            </div>
-                           <img src="./img/icons/instrymenty-logo.png" alt="все инструменты"class="banner__item-img">
+                           <img src="./img/icons/instrymenty-logo.png" alt="все инструменты" class="banner__item-img">
                         </div>
-                        <img src="./img/icons/instrymenty-logo-2.png" alt="все инструменты" >
+                        <img src="./img/icons/instrymenty-logo-2.png" alt="все инструменты">
                      </div>
                   </div>
                </div>
-
-               <!-- @@include('html/_mainSlider.htm') -->
             </div>
          </section>
          <section class="benefits">
@@ -109,7 +106,7 @@
                            <h3 class="benefits__title">Доставка по РФ</h3>
                         </div>
                         <p class="benefits__text">
-                           Деловые Линии, СДЭК, Boxberry,отправка в любой регион России</p>
+                           Деловые Линии, СДЭК, Boxberry, отправка в любой регион России</p>
                      </div>
                      <div class="benefits__item">
                         <div class="benefits__title-container">
@@ -230,7 +227,9 @@
                <h2 class="about__title">О компании</h2>
                <div class="about__wrapper">
                   <div class="about__img-container">
-                     <img src="./img/content/process.jpg" alt="компанния">
+                     <img src="./img/content/process.jpg" 
+                     srcset="./img/content/process.jpg 575w, ./img/content/process-767.jpg 768w, ./img/content/process.jpg 1200w"
+                      alt="компанния">
                   </div>
                   <div class="about__content">
                      <h4 class="about__offer-title">Мы предлагаем инновационные решения и профессиональный подход</h4>
@@ -255,9 +254,7 @@
                </div>
                <div class="news__body">
                   <div class="swiper news-slider">
-                     <!-- Additional required wrapper -->
                      <div class="swiper-wrapper">
-                        <!-- Slides -->
                         <div class="swiper-slide news__item">
                            <div>
                               <div>
@@ -319,7 +316,6 @@
                            </div>
                         </div>
                      </div>
-                     <!-- If we need navigation buttons -->
                   </div>
                   <div class="swiper-button-prev news"></div>
                   <div class="swiper-button-next news"></div>
@@ -334,9 +330,7 @@
                </div>
                <div class="articles__body">
                   <div class="swiper articles-slider">
-                     <!-- Additional required wrapper -->
                      <div class="swiper-wrapper">
-                        <!-- Slides -->
                         <div class="swiper-slide articles__item">
                            <div>
                               <div>
@@ -347,7 +341,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -359,7 +353,7 @@
                                  <h5>Типы клемм в контактных вставках</h5>
                                  <p>Контактные вставки и способы присоединения проводников к контактам</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -372,7 +366,7 @@
                                  </h5>
                                  <p>Совместимость компонентов разъёма по типоразмеру</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -384,7 +378,7 @@
                                  <h5>Типы клемм в контактных вставках</h5>
                                  <p>Контактные вставки и способы присоединения проводников к контактам</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
                         <div class="swiper articles__item">
@@ -396,7 +390,7 @@
                                  <h5>Информация о сальниках (кабельных вводах)</h5>
                                  <p>Основная информация о типах сальников и их назначении</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -409,12 +403,11 @@
                                  </h5>
                                  <p>Совместимость компонентов разъёма по типоразмеру</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="#">Читать</a>
                            </div>
                         </div>
 
                      </div>
-                     <!-- If we need navigation buttons -->
                   </div>
                   <div class="swiper-button-prev articles"></div>
                   <div class="swiper-button-next articles"></div>
@@ -430,9 +423,7 @@
                </div>
                <div class="documents__body">
                   <div class="swiper documents-slider">
-                     <!-- Additional required wrapper -->
                      <div class="swiper-wrapper">
-                        <!-- Slides -->
                         <div class="swiper-slide documents__item">
                            <div>
                               <div>
@@ -443,7 +434,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A</p>
                               </div>
-                              <button>Скачать</button>
+                              <a href="#">Скачать</a>
                            </div>
                         </div>
                         <div class="swiper-slide documents__item">
@@ -455,7 +446,7 @@
                                  <h5>Серия НА</h5>
                                  <p>Компактные контактные вставки промышленных разъемов 3A, 10A, 16A, 32A </p>
                               </div>
-                              <button>Скачать</button>
+                              <a href="#">Скачать</a>
                            </div>
                         </div>
 
@@ -469,7 +460,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A, 3A, 10A, 16A, 32A</p>
                               </div>
-                              <button>Скачать</button>
+                              <a href="#">Скачать</a>
                            </div>
                         </div>
                         <div class="swiper-slide documents__item">
@@ -482,7 +473,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A</p>
                               </div>
-                              <button>Скачать</button>
+                              <a href="#">Скачать</a>
                            </div>
                         </div>
                         <div class="swiper-slide documents__item">
@@ -495,12 +486,11 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A, 3A, 10A, 16A, 32A</p>
                               </div>
-                              <button>Скачать</button>
+                              <a>Скачать</a>
                            </div>
                         </div>
 
                      </div>
-                     <!-- If we need navigation buttons -->
                   </div>
                   <div class="swiper-button-prev documents"></div>
                   <div class="swiper-button-next documents"></div>
@@ -515,9 +505,7 @@
                </div>
                <div class="brands__body">
                   <div class="swiper brands-slider">
-                     <!-- Additional required wrapper -->
                      <div class="swiper-wrapper brand">
-                        <!-- Slides -->
                         <div class="swiper-slide brand">
                            <a href="#" class="brands__slider-item">
                               <img src="./img/icons/partner-logo.png" alt="брэнд">
@@ -559,7 +547,6 @@
                            </a>
                         </div>
                      </div>
-                     <!-- If we need navigation buttons -->
                   </div>
                   <div class="swiper-button-prev brands"></div>
                   <div class="swiper-button-next brands"></div>
